--- a/ICD_comparison/Final_Result.html
+++ b/ICD_comparison/Final_Result.html
@@ -76,41 +76,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>9</th>
-      <td>FlowSwitcherFlowId</td>
-      <td>GroundMwir</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>NormalizationType</td>
-      <td>Disabled</td>
-    </tr>
-    <tr>
-      <th>16</th>
-      <td>NormalizationType</td>
-      <td>HistogramEqualization</td>
-    </tr>
-    <tr>
-      <th>17</th>
-      <td>NormalizationType</td>
-      <td>LinearTransform</td>
-    </tr>
-    <tr>
-      <th>18</th>
-      <td>NormalizationType</td>
-      <td>MeanStdCrop</td>
-    </tr>
-    <tr>
-      <th>19</th>
-      <td>OsdValue</td>
-      <td>Version</td>
-    </tr>
-    <tr>
-      <th>25</th>
-      <td>OsdValue</td>
-      <td>Latency</td>
-    </tr>
   </tbody>
 </table>
 <h2>Detector groups/classes</h2>
@@ -125,16 +90,16 @@ th {
   </thead>
   <tbody>
     <tr>
-      <th>0</th>
+      <th>1</th>
       <td>SeaMwirDetector</td>
-      <td>jetski</td>
-      <td>jetski</td>
+      <td>motosdfgrboat</td>
+      <td>motorboat</td>
     </tr>
     <tr>
-      <th>4</th>
-      <td>SeaSwirDetector</td>
-      <td>jetski</td>
-      <td>jetski</td>
+      <th>11</th>
+      <td>GroundRgbSwirDetector</td>
+      <td>person</td>
+      <td>perssrweron</td>
     </tr>
   </tbody>
 </table>
@@ -170,6 +135,16 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>6</th>
+      <td>std::string</td>
+      <td>GcParametevcvsswdfrs[N/A].Value</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Not updatable</td>
+      <td>GenICam parameters</td>
+    </tr>
   </tbody>
 </table>
 <h2>Stream GstSource configuration</h2>
@@ -182,7 +157,7 @@ th {
       <th>Default value</th>
       <th>Min allowed value</th>
       <th>Max allowed value</th>
-      <th>Updatable</th>
+      <th>Updatsnnsdable</th>
       <th>Description</th>
     </tr>
   </thead>
@@ -242,6 +217,16 @@ th {
   </thead>
   <tbody>
     <tr>
+      <th>0</th>
+      <td>uint32_t</td>
+      <td>RotdfdfateAngle</td>
+      <td>0.0</td>
+      <td>0.0</td>
+      <td>270.0</td>
+      <td>Not updatable</td>
+      <td>an angle to rotate the frame,should be a multiple of 90 between 0 and 270</td>
+    </tr>
+    <tr>
       <th>2</th>
       <td>uint32_t</td>
       <td>Roi.X</td>
@@ -268,13 +253,6 @@ th {
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>Type</th>
-      <th>SDK name</th>
-      <th>Default value</th>
-      <th>Min allowed value</th>
-      <th>Max allowed value</th>
-      <th>Updatable</th>
-      <th>Description</th>
     </tr>
   </thead>
   <tbody>
@@ -587,41 +565,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>9</th>
-      <td>FlowSwitcherFlowId</td>
-      <td>GrountwertdMwir</td>
-    </tr>
-    <tr>
-      <th>15</th>
-      <td>NormdfgalizationType</td>
-      <td>Disabled</td>
-    </tr>
-    <tr>
-      <th>16</th>
-      <td>NormdfgalizationType</td>
-      <td>HistogramEqualization</td>
-    </tr>
-    <tr>
-      <th>17</th>
-      <td>NormdfgalizationType</td>
-      <td>LinearTransform</td>
-    </tr>
-    <tr>
-      <th>18</th>
-      <td>NormdfgalizationType</td>
-      <td>MeanStdCrop</td>
-    </tr>
-    <tr>
-      <th>19</th>
-      <td>OsdValue</td>
-      <td></td>
-    </tr>
-    <tr>
-      <th>25</th>
-      <td>OsdValue</td>
-      <td></td>
-    </tr>
   </tbody>
 </table>
 <h2>Detector groups/classes</h2>
@@ -636,16 +579,16 @@ th {
   </thead>
   <tbody>
     <tr>
-      <th>0</th>
+      <th>1</th>
       <td>SeaMwirDetector</td>
-      <td>fgdfg</td>
-      <td>jetski</td>
+      <td>motorboat</td>
+      <td>motorboat</td>
     </tr>
     <tr>
-      <th>4</th>
-      <td>SeaSwirDetector</td>
-      <td>jetski</td>
-      <td></td>
+      <th>11</th>
+      <td>GroundRgbSwirDetector</td>
+      <td>person</td>
+      <td>person</td>
     </tr>
   </tbody>
 </table>
@@ -681,6 +624,16 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>6</th>
+      <td>std::string</td>
+      <td>GcParameters[N/A].Value</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Not updatable</td>
+      <td>GenICam parameters</td>
+    </tr>
   </tbody>
 </table>
 <h2>Stream GstSource configuration</h2>
@@ -693,6 +646,7 @@ th {
       <th>Default value</th>
       <th>Min allowed value</th>
       <th>Max allowed value</th>
+      <th>Updatable</th>
       <th>Description</th>
     </tr>
   </thead>
@@ -704,6 +658,7 @@ th {
       <td>uridecodebin uri={}</td>
       <td></td>
       <td></td>
+      <td>Not updatable</td>
       <td>source pipeline part with {} marking the url</td>
     </tr>
     <tr>
@@ -714,6 +669,7 @@ th {
       <td>f</td>
       <td></td>
       <td>url to replace in Source string</td>
+      <td></td>
     </tr>
   </tbody>
 </table>
@@ -749,6 +705,16 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>0</th>
+      <td>uint32_t</td>
+      <td>RotateAngle</td>
+      <td>0.0</td>
+      <td>0.0</td>
+      <td>270.0</td>
+      <td>Not updatable</td>
+      <td>an angle to rotate the frame,should be a multiple of 90 between 0 and 270</td>
+    </tr>
     <tr>
       <th>2</th>
       <td>uint32_t</td>
@@ -786,6 +752,16 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>0</th>
+      <td>FlowSwitcherFlowId</td>
+      <td>FlowId</td>
+      <td>SeaMwir</td>
+      <td></td>
+      <td></td>
+      <td>Updatable</td>
+      <td>flow id reported by this flow switcher</td>
+    </tr>
   </tbody>
 </table>
 <h2>Stream SeaMwirDetector configuration</h2>
