added feature of deleted/adition of headers. clean code

--- a/ICD_comparison/Final_Result.html
+++ b/ICD_comparison/Final_Result.html
@@ -76,6 +76,11 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>9</th>
+      <td>FlowSwitcherFlowId</td>
+      <td>GroundMwir</td>
+    </tr>
   </tbody>
 </table>
 <h2>Detector groups/classes</h2>
@@ -89,18 +94,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>1</th>
-      <td>SeaMwirDetector</td>
-      <td>motosdfgrboat</td>
-      <td>motorboat</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>GroundRgbSwirDetector</td>
-      <td>person</td>
-      <td>perssrweron</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream RawSource configuration</h2>
@@ -135,55 +128,12 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>6</th>
-      <td>std::string</td>
-      <td>GcParametevcvsswdfrs[N/A].Value</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>Not updatable</td>
-      <td>GenICam parameters</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream GstSource configuration</h2>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>Type</th>
-      <th>SDK name</th>
-      <th>Default value</th>
-      <th>Min allowed value</th>
-      <th>Max allowed value</th>
-      <th>Updatsnnsdable</th>
-      <th>Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>std::string</td>
-      <td>Source</td>
-      <td>uridecodebin uri={}</td>
-      <td></td>
-      <td></td>
-      <td>Not updatable</td>
-      <td>source pipeline part with {} marking the url</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>std::string</td>
-      <td>Url</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>Not updatable</td>
-      <td>url to replace in Source string</td>
-    </tr>
-  </tbody>
-</table>
+
+<h4>Deleted Header</h4>
+
 <h2>Stream FramerateController configuration</h2>
 <table border="1" class="dataframe">
   <thead>
@@ -216,36 +166,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>0</th>
-      <td>uint32_t</td>
-      <td>RotdfdfateAngle</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>270.0</td>
-      <td>Not updatable</td>
-      <td>an angle to rotate the frame,should be a multiple of 90 between 0 and 270</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>uint32_t</td>
-      <td>Roi.X</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>8192.0</td>
-      <td>Not updatable</td>
-      <td>ROI to extract from the image before further processing</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>uint32_t</td>
-      <td>Roi.Width</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>8192.0</td>
-      <td>Not updatable</td>
-      <td>ROI to extract from the image before further processing</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream FlowSwitcher configuration</h2>
@@ -253,6 +173,13 @@ th {
   <thead>
     <tr style="text-align: right;">
       <th></th>
+      <th>Type</th>
+      <th>SDK name</th>
+      <th>Default value</th>
+      <th>Min allowed value</th>
+      <th>Max allowed value</th>
+      <th>Updatable</th>
+      <th>Description</th>
     </tr>
   </thead>
   <tbody>
@@ -548,6 +475,43 @@ th {
   <tbody>
   </tbody>
 </table>
+<h2>Stream GstSource confiljnlnljguration</h2>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Type</th>
+      <th>SDK name</th>
+      <th>Default value</th>
+      <th>Min allowed value</th>
+      <th>Max allowed value</th>
+      <th>Updatable</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>std::string</td>
+      <td>Source</td>
+      <td>uridecodebin uri={}</td>
+      <td></td>
+      <td></td>
+      <td>Not updatable</td>
+      <td>source pipeline part with {} marking the url</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>std::string</td>
+      <td>Url</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Not updatable</td>
+      <td>url to replace in Source string</td>
+    </tr>
+  </tbody>
+</table><h3>               </h3>
 
 </div>
 
@@ -565,6 +529,11 @@ th {
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <th>9</th>
+      <td>FlowSwitcherFlowId</td>
+      <td>GrountwertdMwir</td>
+    </tr>
   </tbody>
 </table>
 <h2>Detector groups/classes</h2>
@@ -578,18 +547,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>1</th>
-      <td>SeaMwirDetector</td>
-      <td>motorboat</td>
-      <td>motorboat</td>
-    </tr>
-    <tr>
-      <th>11</th>
-      <td>GroundRgbSwirDetector</td>
-      <td>person</td>
-      <td>person</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream RawSource configuration</h2>
@@ -624,16 +581,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>6</th>
-      <td>std::string</td>
-      <td>GcParameters[N/A].Value</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>Not updatable</td>
-      <td>GenICam parameters</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream GstSource configuration</h2>
@@ -666,10 +613,10 @@ th {
       <td>std::string</td>
       <td>Url</td>
       <td></td>
-      <td>f</td>
       <td></td>
+      <td></td>
+      <td>Not updatable</td>
       <td>url to replace in Source string</td>
-      <td></td>
     </tr>
   </tbody>
 </table>
@@ -705,36 +652,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>0</th>
-      <td>uint32_t</td>
-      <td>RotateAngle</td>
-      <td>0.0</td>
-      <td>0.0</td>
-      <td>270.0</td>
-      <td>Not updatable</td>
-      <td>an angle to rotate the frame,should be a multiple of 90 between 0 and 270</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>uint32_t</td>
-      <td>Roi.X</td>
-      <td>4.0</td>
-      <td>0.0</td>
-      <td>8192.0</td>
-      <td>Not updatable</td>
-      <td>ROI to extract from the image before further processing</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>uint32_t</td>
-      <td>Roi.Width</td>
-      <td>6.0</td>
-      <td>0.0</td>
-      <td>8192.0</td>
-      <td>Not updatable</td>
-      <td>ROI to extract from the image before further processing</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream FlowSwitcher configuration</h2>
@@ -752,16 +669,6 @@ th {
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th>0</th>
-      <td>FlowSwitcherFlowId</td>
-      <td>FlowId</td>
-      <td>SeaMwir</td>
-      <td></td>
-      <td></td>
-      <td>Updatable</td>
-      <td>flow id reported by this flow switcher</td>
-    </tr>
   </tbody>
 </table>
 <h2>Stream SeaMwirDetector configuration</h2>
@@ -1054,5 +961,9 @@ th {
   <tbody>
   </tbody>
 </table>
+<h2>Stream GstSource confiljnlnljguration</h2>
+
+<h4>Added Header</h4>
+<h3>               </h3>
 
 </div>
