--- a/ICD_comparison/old_ICD_file.html
+++ b/ICD_comparison/old_ICD_file.html
@@ -96,7 +96,7 @@ th {
     </tr>
 
     <tr>
-        <td rowspan="4" colspan="1">NormalizationType</td>
+        <td rowspan="4" colspan="1">NormdfgalizationType</td>
         <td rowspan="1" colspan="1">Disabled</td>
     </tr>
 
@@ -114,7 +114,7 @@ th {
 
     <tr>
         <td rowspan="10" colspan="1">OsdValue</td>
-        <td rowspan="1" colspan="1">Version</td>
+
     </tr>
 
     <tr>
@@ -138,7 +138,7 @@ th {
     </tr>
 
     <tr>
-        <td rowspan="1" colspan="1">Latency</td>
+        <td rowspan="1" colspan="1"></td>
     </tr>
 
     <tr>
@@ -190,7 +190,7 @@ th {
 
     <tr>
         <td rowspan="4" colspan="1">SeaMwirDetector</td>
-        <td rowspan="1" colspan="1">jetski</td>
+        <td rowspan="1" colspan="1">fgdfg</td>
         <td rowspan="1" colspan="1">jetski</td>
     </tr>
 
@@ -214,7 +214,7 @@ th {
 
     <tr>
         <td rowspan="4" colspan="1">SeaSwirDetector</td>
-        <td rowspan="1" colspan="1">jetski</td>
+
         <td rowspan="1" colspan="1">jetski</td>
     </tr>
 
@@ -417,7 +417,7 @@ th {
         <th rowspan="1" colspan="1">Default value</th>
         <th rowspan="1" colspan="1">Min allowed value</th>
         <th rowspan="1" colspan="1">Max allowed value</th>
-        <th rowspan="1" colspan="1">Updatable</th>
+<!--        <th rowspan="1" colspan="1">Updatable</th>-->
         <th rowspan="1" colspan="1">Description</th>
     </tr>
 
@@ -427,7 +427,7 @@ th {
         <td rowspan="1" colspan="1">uridecodebin uri={}</td>
         <td rowspan="1" colspan="1"></td>
         <td rowspan="1" colspan="1"></td>
-        <td rowspan="1" colspan="1">Not updatable</td>
+<!--        <td rowspan="1" colspan="1">Not updatable</td>-->
         <td rowspan="1" colspan="1">source pipeline part with {} marking the url</td>
     </tr>
 
@@ -435,9 +435,9 @@ th {
         <td rowspan="1" colspan="1">std::string</td>
         <td rowspan="1" colspan="1">Url</td>
         <td rowspan="1" colspan="1"></td>
+        <td rowspan="1" colspan="1">f</td>
         <td rowspan="1" colspan="1"></td>
-        <td rowspan="1" colspan="1"></td>
-        <td rowspan="1" colspan="1">Not updatable</td>
+<!--        <td rowspan="1" colspan="1">Not updatable</td>-->
         <td rowspan="1" colspan="1">url to replace in Source string</td>
     </tr>
 
@@ -500,7 +500,7 @@ th {
     <tr>
         <td rowspan="1" colspan="1">uint32_t</td>
         <td rowspan="1" colspan="1">Roi.X</td>
-        <td rowspan="1" colspan="1">0</td>
+        <td rowspan="1" colspan="1">4</td>
         <td rowspan="1" colspan="1">0</td>
         <td rowspan="1" colspan="1">8192</td>
         <td rowspan="1" colspan="1">Not updatable</td>
@@ -518,7 +518,7 @@ th {
     <tr>
         <td rowspan="1" colspan="1">uint32_t</td>
         <td rowspan="1" colspan="1">Roi.Width</td>
-        <td rowspan="1" colspan="1">0</td>
+        <td rowspan="1" colspan="1">6</td>
         <td rowspan="1" colspan="1">0</td>
         <td rowspan="1" colspan="1">8192</td>
         <td rowspan="1" colspan="1">Not updatable</td>
