--- a/ICD_comparison/old_ICD_file.html
+++ b/ICD_comparison/old_ICD_file.html
@@ -3292,7 +3292,7 @@ th {
         <td rowspan="1" colspan="1">0</td>
         <td rowspan="1" colspan="1">0</td>
         <td rowspan="1" colspan="1">100</td>
-        <td rowspan="1" colspan="1">Not updatable</td>
+        <td rowspan="1" colspan="1">5</td>
         <td rowspan="1" colspan="1">target frame rate, 0 to use input framerate</td>
     </tr>
 
