--- a/ICD_comparison/new_ICD_file.html
+++ b/ICD_comparison/new_ICD_file.html
@@ -914,7 +914,7 @@ th {
         <td rowspan="1" colspan="1"></td>
         <td rowspan="1" colspan="1"></td>
         <td rowspan="1" colspan="1">Updatable</td>
-        <td rowspan="1" colspan="1">only classes in this list will be reported, can be '*' to include all classes</td>
+        <td rowspan="1" colspan="1">only classes in this list widfhdfll be reported, can be '*' to include all classes</td>
     </tr>
 
 </table>
@@ -3249,7 +3249,7 @@ th {
         <td rowspan="1" colspan="1">false</td>
         <td rowspan="1" colspan="1"></td>
         <td rowspan="1" colspan="1"></td>
-        <td rowspan="1" colspan="1">Updatable</td>
+        <td rowspan="1" colspan="1">3</td>
         <td rowspan="1" colspan="1">true to enable stream preview</td>
     </tr>
 
